
8.0  2018-09-08
  - Removed test command.
  - Removed deprecated error and finish events from Mojo::IOLoop::Delay.
  - Improved Mojo::Promise to allow for reject and resolve methods to be used as
    class methods.
  - Reduced memory usage of Mojo::IOLoop::Stream.

7.94  2018-08-27
  - Added EXPERIMENTAL content_type and file_type methods to Mojolicious::Types.
  - Fixed a bug where the reply->file helper would not try to set a Content-Type
    header.
  - Fixed a bug where the render method in Mojolicious::Controller would not
    always use Mojolicious::Types to find the correct Content-Type value.

7.93  2018-08-11
  - Improved Test::Mojo to accept Mojo::File objects pointing t application
    scripts and to override configurations more consistently.

7.92  2018-08-09
  - This release reverts the addition of stream classes (added in 7.83), which
    have unfortunately resulted in many Mojolicious applications becoming
    unstable. While there are no known exploits yet, we've chosen to err on the
    side of cautiousness and will classify this as a security issue.

7.91  2018-08-09
  - Fixed a bug in Mojo::IOLoop::Stream where is_readable could not be called
    after a timeout event.

7.90  2018-08-08
  - Deprecated expect_close attribute in Mojo::Content.
  - Removed deprecated delay helper from Mojolicious::Plugin::DefaultHelpers.
  - Changed error message for destroyed transactions from
    "Connection already closed" to "Transaction already destroyed".
  - Fixed a race condition in Mojo::UserAgent where closing connections could
    sometimes end up being reused.
  - Fixed an RFC 7230 compliance problem where HTTP/1.1 responses were sometimes
    incomplete.

7.89  2018-08-06
  - Mojolicious has a new logo!

7.88  2018-07-11
  - Added EXPERIMENTAL bytes_read, bytes_written and transition methods to
    Mojo::IOLoop::Stream.
  - Added transition event to Mojo::IOLoop::Stream.
  - Improved default request ids generated by Mojo::Message::Request to be a